--- a/style.css
+++ b/style.css
@@ -4,9 +4,15 @@
 .container {
 	padding-bottom: 30px;
 }
+html,
 body {
 	font-family: 'Poppins', sans-serif;
 	font-family: 'Roboto', sans-serif;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
 }
 .logo {
 	width: 25%;
@@ -58,9 +64,11 @@ body {
 	border-radius: 5%;
 	text-align: center;
 	padding-top: 40px;
-	margin-left: 34px;
-	margin-right: 34px;
 }
+.info-box-fix {
+	margin-right: 100px;
+}
+
 .course-h3 {
 	text-align: center;
 	margin-bottom: 40px;
